[project]
name = "u-chi-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vlad", email = "vlmr.mko@gmail.com"},
]
dependencies = [
    "gymnasium==1.0.0",
    "stable-baselines3==2.4.0",
    "psutil",
    "gym",
    "pyprind",
    "pyyaml",
    "typeguard",
    "tensorboard",
    "gymnasium[mujoco]==1.0.0",
    "seaborn",
    "tbparse",
    "sb3-contrib",
    "rliable>=1.2.0",
]
requires-python = ">=3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "pip-tools>=7.5.1",
]
